duck/test/fail/spec_mismatch.duck
main = testAll

f :: Int -> Int
g x = x
